# PromptBox

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  mod.rs  project.rs  prompt.rs  search.rs  settings.rs  task.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: mod.rs  project.rs  prompt.rs  search.rs  task.rs
src-tauri/src/repositories/: mod.rs  project_repository.rs  prompt_repository.rs  task_repository.rs
src-tauri/src/services/: backup_service.rs  mod.rs  search_service.rs
src/components/: GlobalSearch.tsx  SettingsDialog.tsx  Toast.tsx  index.ts
src/lib/: utils.ts
src/store/: appStore.ts  index.ts
src/tauri-api/: backup.ts  index.ts  projects.ts  prompts.ts  search.ts  tasks.ts
src/types/: index.ts
